Conversation processing pass 1 complete: new, leave, close, ok, accept, reject, forward, delegate, escalate

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "grunt-contrib-jshint": "~0.6.3",
     "grunt-contrib-nodeunit": "~0.2.0",
     "grunt-contrib-uglify": "~0.2.2",
-    "grunt-rsync" : "~0.5.0",
+    "grunt-rsync": "~0.5.0",
     "grunt-ssh": "~0.11.0",
     "should": "2.1.1",
     "mocha": "1.16.2",
@@ -17,43 +17,47 @@
     "a": "0.3.8"
   },
   "dependencies": {
-    "rabbit.js": "0.3.1",
-    "geolib": "1.3.1",
+    "agenda": "0.6.2",
+    "amqp": "0.1.8",
+    "assert": "^1.1.2",
     "async": "0.2.9",
+    "bson": "0.2.5",
+    "config": "0.4.34",
+    "crypto": "0.0.3",
+    "csv": "0.3.6",
+    "csvtojson": "0.1.7",
+    "describe": "^1.2.0",
     "emailjs": "0.3.6",
     "express": "3.4.7",
     "express-resource": "1.0.0",
-    "amqp": "0.1.8",
-    "mongodb": "1.3.23",
-    "config": "0.4.34",
-    "js-yaml": "3.0.1",
-    "mongorepository": "1.1.1",
-    "nodemailer": "0.6.0",
-    "mustache": "0.8.1",
-    "twilio": "1.6.0",
-    "q": "1.0.0",
-    "underscore": "1.5.2",
-    "xml2json": "0.3.2",
-    "log4js": "0.6.9",
-    "csv": "0.3.6",
     "formidable": "1.0.14",
     "fs-extra": "0.8.1",
+    "geolib": "1.3.1",
+    "js-yaml": "3.0.1",
     "jwt-simple": "0.1.0",
+    "log4js": "0.6.9",
+    "mailchimp-api": "2.0.6",
     "moment": "2.5.1",
+    "mongodb": "1.3.23",
+    "mongoose": "3.8.17",
+    "mongorepository": "1.1.1",
+    "mustache": "0.8.1",
+    "nodemailer": "0.6.0",
+    "q": "1.0.0",
+    "rabbit.js": "0.3.1",
     "rabbitmq_minionpool": "0.0.7",
-    "step": "0.0.5",
+    "sendgrid": "1.1.1",
+    "shortid": "2.0.1",
+    "should": "^4.0.4",
     "socket.io": "0.9.16",
     "socket.io-client": "0.9.16",
-    "bson": "0.2.5",
-    "crypto": "0.0.3",
-    "csvtojson": "0.1.7",
+    "step": "0.0.5",
     "stripe": "2.4.2",
-    "agenda": "0.6.2",
-    "xpath" : "0.0.6",
-    "xmldom" : "0.1.19",
-    "sendgrid" : "1.1.1",
-    "shortid" : "2.0.1",
-    "mailchimp-api" : "2.0.6",
-    "mongoose" : "3.8.17"
+    "supertest": "^0.14.0",
+    "twilio": "1.6.0",
+    "underscore": "1.5.2",
+    "xml2json": "0.3.2",
+    "xmldom": "0.1.19",
+    "xpath": "0.0.6"
   }
 }
