--- a/config/default.yaml
+++ b/config/default.yaml
@@ -8,7 +8,7 @@ mongo:
   host: 'localhost'
   port: 27017
   dbName: 'cp'
-  agenda: 'ajenda'
+  agenda: 'agenda'
 
 socketio:
   origin: 'localhost:*'
