--- a/package.json
+++ b/package.json
@@ -33,8 +33,11 @@
     "formidable": "1.0.14",
     "fs-extra": "0.8.1",
     "geolib": "1.3.1",
+    "glob": "^4.1.3",
     "js-yaml": "3.0.1",
+    "jsonwebtoken": "^1.1.2",
     "jwt-simple": "0.1.0",
+    "lodash": "^2.4.1",
     "log4js": "0.6.9",
     "mailchimp-api": "2.0.6",
     "moment": "2.5.1",
@@ -43,6 +46,11 @@
     "mongorepository": "1.1.1",
     "mustache": "0.8.1",
     "nodemailer": "0.6.0",
+    "passport": "^0.2.1",
+    "passport-facebook": "^1.0.3",
+    "passport-github": "^0.1.5",
+    "passport-http-bearer": "^1.0.1",
+    "passport-local": "^1.0.0",
     "q": "1.0.0",
     "rabbit.js": "0.3.1",
     "rabbitmq_minionpool": "0.0.7",
