--- a/package.json
+++ b/package.json
@@ -49,7 +49,9 @@
     "passport": "^0.2.1",
     "passport-facebook": "^1.0.3",
     "passport-github": "^0.1.5",
+    "passport-google-oauth": "^0.1.5",
     "passport-http-bearer": "^1.0.1",
+    "passport-linkedin": "^0.1.3",
     "passport-local": "^1.0.0",
     "q": "1.0.0",
     "rabbit.js": "0.3.1",
