--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "amqp": "0.1.8",
     "assert": "^1.1.2",
     "async": "0.2.9",
+    "body-parser": "^1.10.1",
     "bson": "0.2.5",
     "config": "0.4.34",
     "crypto": "0.0.3",
@@ -28,12 +29,13 @@
     "csvtojson": "0.1.7",
     "describe": "^1.2.0",
     "emailjs": "0.3.6",
-    "express": "3.4.7",
-    "express-resource": "1.0.0",
+    "express": "^4.11.0",
     "formidable": "1.0.14",
+    "fs": "0.0.2",
     "fs-extra": "0.8.1",
     "geolib": "1.3.1",
     "glob": "^4.1.3",
+    "http": "0.0.0",
     "js-yaml": "3.0.1",
     "jsonwebtoken": "^1.1.2",
     "jwt-simple": "0.1.0",
@@ -59,8 +61,7 @@
     "sendgrid": "1.1.1",
     "shortid": "2.0.1",
     "should": "^4.0.4",
-    "socket.io": "0.9.16",
-    "socket.io-client": "0.9.16",
+    "socket.io": "^1.2.1",
     "step": "0.0.5",
     "stripe": "2.4.2",
     "supertest": "^0.14.0",
