--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "step": "0.0.5",
     "stripe": "2.4.2",
     "supertest": "^0.14.0",
+    "swagger-node-express": "^2.1.3",
     "twilio": "1.6.0",
     "underscore": "1.5.2",
     "xmldom": "0.1.19",
