--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "passport-http-bearer": "^1.0.1",
     "passport-linkedin": "^0.1.3",
     "passport-local": "^1.0.0",
+    "passport-strategy": "^1.0.0",
     "q": "1.0.0",
     "rabbit.js": "0.3.1",
     "rabbitmq_minionpool": "0.0.7",
