--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "q": "1.0.0",
     "rabbit.js": "0.3.1",
     "rabbitmq_minionpool": "0.0.7",
+    "request": "^2.55.0",
     "sendgrid": "1.1.1",
     "shortid": "2.0.1",
     "should": "^4.0.4",
