--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "atrium-server",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "devDependencies": {
     "grunt": "~0.4.2",
     "grunt-contrib-jshint": "~0.6.3",
@@ -8,10 +8,10 @@
     "grunt-contrib-uglify": "~0.2.2",
     "grunt-rsync": "~0.5.0",
     "grunt-ssh": "~0.11.0",
-    "should": "2.1.1",
+    "should": "^4.0.4",
     "mocha": "1.16.2",
-    "assert": "1.1.0",
-    "supertest": "0.8.3",
+    "assert": "^1.1.2",
+    "supertest": "^0.14.0",
     "nodemock": "0.3.3",
     "nodeunit": "0.8.2",
     "a": "0.3.8"
@@ -19,7 +19,6 @@
   "dependencies": {
     "agenda": "0.6.2",
     "amqp": "0.1.8",
-    "assert": "^1.1.2",
     "async": "0.2.9",
     "body-parser": "^1.10.1",
     "bson": "0.2.5",
@@ -38,14 +37,14 @@
     "glob": "^4.1.3",
     "http": "0.0.0",
     "js-yaml": "3.0.1",
-    "jsonwebtoken": "^1.1.2",
+    "jsonwebtoken": "5.0.0",
     "jwt-simple": "0.1.0",
     "lodash": "^2.4.1",
     "log4js": "0.6.9",
     "mailchimp-api": "2.0.6",
     "moment": "2.5.1",
     "mongodb": "1.3.23",
-    "mongoose": "3.8.17",
+    "mongoose": "3.8.28",
     "mongorepository": "1.1.1",
     "mustache": "0.8.1",
     "nodemailer": "0.6.0",
@@ -63,14 +62,12 @@
     "request": "^2.55.0",
     "sendgrid": "1.1.1",
     "shortid": "2.0.1",
-    "should": "^4.0.4",
     "socket.io": "^1.2.1",
     "step": "0.0.5",
-    "stripe": "2.4.2",
-    "supertest": "^0.14.0",
     "swagger-node-express": "^2.1.3",
     "twilio": "1.6.0",
     "underscore": "1.5.2",
+    "winston": "^1.0.1",
     "xmldom": "0.1.19",
     "xpath": "0.0.6"
   }
