--- a/package.json
+++ b/package.json
@@ -2,19 +2,21 @@
   "name": "atrium-server",
   "version": "1.0.0",
   "devDependencies": {
-    "grunt": "~0.4.2",
+    "a": "0.3.8",
+    "assert": "^1.1.2",
+    "grunt": "^0.4.5",
+    "grunt-cli": "^0.1.13",
     "grunt-contrib-jshint": "~0.6.3",
     "grunt-contrib-nodeunit": "~0.2.0",
     "grunt-contrib-uglify": "~0.2.2",
     "grunt-rsync": "~0.5.0",
+    "grunt-shell": "^1.1.2",
     "grunt-ssh": "~0.11.0",
-    "should": "^4.0.4",
     "mocha": "1.16.2",
-    "assert": "^1.1.2",
-    "supertest": "^0.14.0",
     "nodemock": "0.3.3",
     "nodeunit": "0.8.2",
-    "a": "0.3.8"
+    "should": "^4.0.4",
+    "supertest": "^0.14.0"
   },
   "dependencies": {
     "agenda": "0.6.2",
