--- a/config/default.yaml
+++ b/config/default.yaml
@@ -27,15 +27,18 @@ socketio:
     caCertsFile     : './bin/ssl/privatekey.pem'   # this is not needed when self-signed so we assign to privatekey for dev
 
 rabbitmq:
-  host: 'localhost' #owl.rmq.cloudamqp.com #'localhost'
-  login: 'guest' #zzqealbp #'guest'
-  password: 'guest' # 7VuC5MbcMnU-HMxbnSuq_rbq-ywh-61a  #'guest'
+  host: owl.rmq.cloudamqp.com #'localhost'
+  login: zzqealbp #'guest'
+  password: 7VuC5MbcMnU-HMxbnSuq_rbq-ywh-61a  #'guest'
   authMechanism: 'AMQPLAIN'
-  vhost: '/' #zzqealbp #'/'
+  vhost: zzqealbp #'/'
   reconnect: true
   reconnectBackoffStrategy: 'linear'
   reconnectExponentialLimit: 120000
   reconnectBackoffTime: 1000
+
+cloudamqp:
+  url: 'amqp://zzqealbp:7VuC5MbcMnU-HMxbnSuq_rbq-ywh-61a@owl.rmq.cloudamqp.com/zzqealbp'
 
 # This is the development configuration
 restServer:
