--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "assert": "^1.1.2",
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
-    "grunt-contrib-jshint": "~0.6.3",
+    "grunt-contrib-jshint": "^0.11.3",
     "grunt-contrib-nodeunit": "~0.2.0",
     "grunt-contrib-uglify": "~0.2.2",
     "grunt-rsync": "~0.5.0",
