--- a/package.json
+++ b/package.json
@@ -47,10 +47,11 @@
     "mailchimp-api": "2.0.6",
     "moment": "2.5.1",
     "mongodb": "1.3.23",
-    "mongoose": "3.8.28",
+    "mongoose": "^4.1.10",
     "mongorepository": "1.1.1",
     "mustache": "0.8.1",
     "nodemailer": "0.6.0",
+    "paperwork": "^2.1.1",
     "passport": "^0.2.1",
     "passport-facebook": "^1.0.3",
     "passport-github": "^0.1.5",
