--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "agenda": "0.6.2",
     "amqp": "0.1.8",
+    "amqp-connection-manager": "^1.1.2",
     "amqplib": "^0.3.2",
     "async": "0.2.9",
     "body-parser": "^1.10.1",
