--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "body-parser": "^1.10.1",
     "bson": "0.2.5",
     "config": "0.4.34",
+    "cors": "^2.7.1",
     "crypto": "0.0.3",
     "csv": "0.3.6",
     "csvtojson": "0.1.7",
@@ -61,6 +62,7 @@
     "passport-linkedin": "^0.1.3",
     "passport-local": "^1.0.0",
     "passport-strategy": "^1.0.0",
+    "path": "^0.12.7",
     "q": "1.0.0",
     "rabbit.js": "0.3.1",
     "rabbitmq_minionpool": "0.0.7",
@@ -73,6 +75,7 @@
     "twilio": "1.6.0",
     "underscore": "1.5.2",
     "winston": "^1.0.1",
+    "ws": "^0.8.0",
     "xmldom": "0.1.19",
     "xpath": "0.0.6"
   }
